Initial support for selection - for now mostly visualization of arbitrary selection.